--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@ Changes between 1.3.0 and 2.0.0-git:
 -----------------------------------
 
  * WinCE support removal
+ * Subtable decoder API removal (files: demux.c, demux.h)
+ * New chained decoder API (files: chain.c, chain.h)
+   - all PSI table decoders can be chained now based on table_id and extension (subtable id)
  * New descriptor:
    - 0x24 Content labelling descriptor
  * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
