--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Changes between 1.3.0 and 2.0.0-git:
    - 0x24 Content labelling descriptor
  * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
  * FIx bugs in table: CA, EIT
+ * Moved descriptors in a namespace to allow standard specific descriptor decoders and encoders.
 
 Changes between 1.2.0 and 1.3.0:
 --------------------------------
