--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ Changes between 1.3.0 and 2.0.0-git:
  * New descriptor:
    - 0x24 Content labelling descriptor
  * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
- * FIx bugs in table: CA, EIT, NIT
+ * Fix bugs in table: CA, EIT, NIT
  * Moved descriptors in a namespace to allow standard specific descriptor decoders and encoders.
    - use --enable-compat to use old descriptor API (option will be removed in libdvbpsi 2.1.0)
  * More descriptor tests
