--- a/NEWS
+++ b/NEWS
@@ -14,6 +14,7 @@ Changes between 1.3.0 and 2.0.0-git:
  * More descriptor tests
  * Documentation:
    - spelling fixes
+ * Removed example/decode_mpeg.c, it has been superseeded by dvbinfo example application.
 
 Changes between 1.2.0 and 1.3.0:
 --------------------------------
