--- a/NEWS
+++ b/NEWS
@@ -15,6 +15,7 @@ Changes between 1.3.0 and 2.0.0-git:
  * Documentation:
    - spelling fixes
  * Removed example/decode_mpeg.c, it has been superseeded by dvbinfo example application.
+ * Renamed ATSC EIT, ETT, MGT, STT, VCT functions to match dvbpsi_atsc_xxx_xxxx() format iso dvbpsi_atsc_XXXXXX()
 
 Changes between 1.2.0 and 1.3.0:
 --------------------------------
