--- a/AUTHORS
+++ b/AUTHORS
@@ -94,6 +94,10 @@ N: Jiri Pinkava
 E: jiri.pinkava@vscht.cz
 D: Program Delivery Control (0x69)
 
+N: Sebastian Ramacher
+E: sramacher@debian.org
+D: Language improvements
+
 N: Jean-Paul Saman
 E: jpsaman@videolan.org
 D: descriptors: 0x45, 0x8a
