--- a/NEWS
+++ b/NEWS
@@ -7,9 +7,10 @@ Changes between 1.3.0 and 2.0.0-git:
  * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
  * FIx bugs in table: CA, EIT, NIT
  * Moved descriptors in a namespace to allow standard specific descriptor decoders and encoders.
+   - use --enable-compat to use old descriptor API (option will be removed in libdvbpsi 2.1.0)
+ * More descriptor tests
  * Documentation:
    - spelling fixes
- * More descriptor tests
 
 Changes between 1.2.0 and 1.3.0:
 --------------------------------
