--- a/NEWS
+++ b/NEWS
@@ -5,17 +5,23 @@ Changes between 1.3.0 and 2.0.0-git:
  * Subtable decoder API removal (files: demux.c, demux.h)
  * New chained decoder API (files: chain.c, chain.h)
    - all PSI table decoders can be chained now based on table_id and extension (subtable id)
- * New descriptor:
+ * Moved descriptors in a namespace to allow standard specific descriptor decoders and encoders.
+   - use --enable-compat to use old descriptor API (option will be removed in libdvbpsi 2.1.0)
+ * Renamed ATSC EIT, ETT, MGT, STT, VCT functions to match dvbpsi_atsc_xxx_xxxx() format iso dvbpsi_atsc_XXXXXX()
+ * Removed example/decode_mpeg.c, it has been superseeded by dvbinfo example application.
+ * New descriptors:
+   - 0x1d MPEG IOD descriptor
+   - 0x1e MPEG SL descriptor
+   - 0x1f MPEG FMC descriptor
+   - 0x20 MPEG External_ES_ID descriptor
+   - 0x23 MPEG MultiplexBuffer descriptor
    - 0x24 Content labelling descriptor
  * Fix bugs in descriptors: 0x41, 0x44, 0x4a, 0x4b, 0x53, 0x54, 0x55, 0x56, 0x59, 0xa0
  * Fix bugs in table: CA, EIT, NIT
- * Moved descriptors in a namespace to allow standard specific descriptor decoders and encoders.
-   - use --enable-compat to use old descriptor API (option will be removed in libdvbpsi 2.1.0)
+ * Work on SIS table and splice commands.
  * More descriptor tests
  * Documentation:
    - spelling fixes
- * Removed example/decode_mpeg.c, it has been superseeded by dvbinfo example application.
- * Renamed ATSC EIT, ETT, MGT, STT, VCT functions to match dvbpsi_atsc_xxx_xxxx() format iso dvbpsi_atsc_XXXXXX()
 
 Changes between 1.2.0 and 1.3.0:
 --------------------------------
